* infosec - search http://www.infosecuritymag.com/ for security information (from John Bairen)
* pg - Project Gutenberg/Public Domain book (pg) search (from Thad Kerosky)
* slash - Search Slashdot (from Paul Bowers)
* short - Abbreviate long and convoluted URLs (from Reginald Braithwaite-Lee)
* palm - PalmGear.com search (from Herman Fuchs)

Modified Searches

* 

Enhancements

* install now bundled with xplocalsearch.css, to be used as localsearch.css to make
  things match with XP default theme.
* changed default length of retained search history from 50 to 1000.
* Added Finnish translation (from Toni Viemero)

Bug Fixes

* changed progid for MSXML component from MSXML.DOMDocument to MSXML2.DOMDocument


-- What's new for 3.0.0.23

New Searches

* que - Interface with Queue (http://www.irondust.com/queue) from Nick Tornow
* wotsit - Programmers File Format Reference

Modified Searches

* gg - /fresh switch disappeared (/since is enough) - /since now allows a 
       number of days in addition to t,y,w,m, and gets independent of goosearch
* hs - added /new from Brent Beardsley
* jdk - added /1.4, /1.3, /tutorial, /all, /j2ee, /jls, /jvm options
* multi - apostrophes (') in the query now don't generate errors

Enhancements

* switches now can contain . and -. This is used here: jdk HashMap /1.3
* changed defer_tools.js for special searches like setiq.xml that need 
  several forms opened in one window
* added empty localprefs.js and localsearch.css to install, instead of 
  requiring user to create them if they don't exist.
* Shift-F8 and Shift-Ctrl-B now search forward through the history
  instead of searching for a prefix

Bug Fixes

* curr - fixed bug with decimal currency conversion (1.23 usd>cad)
* If you have an old localprefs.js that sets defaultsearch to a nonexistent search, gg is used.
* A local alias can now override a search name.  This was causing a script error
  when the menu was invoked.